unpackaged/main/default/objects/Umbrella_Group__c/Umbrella_Group__c.object-meta.xml
<CustomObject>
    <description>This is used to represent the parent/owner of a group of affiliated Accounts operating within the same Industry/segment that have grouped together for increased purchasing power and pricing leverage.</description>
    <label>Umbrella Group</label>
    <nameField>
        <displayFormat>UG-{00000}</displayFormat>
        <label>Umbrella Group Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Umbrella Groups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>