unpackaged/main/default/objects/Umbrella_Group__c/fields/Umbrella_Group_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Umbrella_Group_Administrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the contact person for any questions/queries related to this group</inlineHelpText>
    <label>Umbrella Group Administrator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Umbrella_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>