unpackaged/main/default/objects/Umbrella_Group__c/fields/Umbrella_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Umbrella_Group_Name__c</fullName>
    <label>Umbrella Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>