unpackaged/main/default/objects/Umbrella_Group__c/fields/Umbrella_Groups__c.field-meta.xml
<CustomField>
    <fullName>Umbrella_Groups__c</fullName>
    <description>Power of One field used for reporting</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Umbrella Groups</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>