unpackaged/main/default/objects/Umbrella_Group__c/fields/Umbrella_Parent__c.field-meta.xml
<CustomField>
    <fullName>Umbrella_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the Umbrella Parent account.</description>
    <label>Umbrella Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parents Umbrella Groups</relationshipLabel>
    <relationshipName>Umbrella_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>