unpackaged/main/default/objects/Umbrella_Group__c/recordTypes/AU_Umbrella_Group.recordType-meta.xml
<RecordType>
    <fullName>AU_Umbrella_Group</fullName>
    <active>true</active>
    <label>AU Umbrella Group</label>
</RecordType>