unpackaged/main/default/objects/Umbrella_Group__c/recordTypes/NZ_Umbrella_Group.recordType-meta.xml
<RecordType>
    <fullName>NZ_Umbrella_Group</fullName>
    <active>true</active>
    <label>NZ Umbrella Group</label>
</RecordType>