unpackaged/main/default/objects/Umbrella_Group__c/validationRules/Cannot_Select_InactiveTerminated_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Select_InactiveTerminated_Account</fullName>
    <active>true</active>
    <description>Ensures an Inactive/Terminated Account cannot be associated to the Umbrella Group</description>
    <errorConditionFormula>AND(
NOT(  Umbrella_Parent__r.RecordType.Name  = &quot;Person Account&quot;),
!ISNULL( Umbrella_Parent__c    ),
OR(
ISNEW(),
ISCHANGED(  Umbrella_Parent__c )),
OR(
ISPICKVAL( Umbrella_Parent__r.Account_Status__c ,&quot;Inactive&quot;),
ISPICKVAL( Umbrella_Parent__r.Account_Status__c , &quot;Terminated&quot;)
),
NOT(CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Admin_Validation_Exceptions__c, $Profile.Name))
)</errorConditionFormula>
    <errorDisplayField>Umbrella_Parent__c</errorDisplayField>
    <errorMessage>You cannot relate an Inactive or Terminated Account</errorMessage>
</ValidationRule>