unpackaged/main/default/objects/Umbrella_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Umbrella_Group_Name__c</columns>
    <columns>Umbrella_Parent__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Umbrella_Group_Administrator__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>